@@ -2,7 +2,7 @@
 
 chmod a+x /opt/DSR/dsr
 touch /opt/DSR/dsr_user_db.txt
-chmod a+rw /opt/DSR/dsr_user_db.txt
+#chmod a+rw /opt/DSR/dsr_user_db.txt
 chmod 644 /etc/profile.d/dsr.sh
 chmod a+w /opt/DSR/example
 source /etc/profile.d/dsr.sh
